--- a/src/app.html
+++ b/src/app.html
@@ -1,13 +1,14 @@
 <!doctype html>
 <html lang="en">
-	<head>
-		<meta charset="utf-8" />
-		<link rel="icon" href="%sveltekit.assets%/favicon.png" />
-		<link rel="stylesheet" href="/styles/global.css">
-		<meta name="viewport" content="width=device-width, initial-scale=1" />
-		%sveltekit.head%
-	</head>
-	<body data-sveltekit-preload-data="hover">
-		<div style="display: contents">%sveltekit.body%</div>
-	</body>
+    <head>
+        <meta charset="utf-8" />
+        <link rel="icon" href="%sveltekit.assets%/favicon.png" />
+        <meta name="viewport" content="width=device-width, initial-scale=1" />
+        %sveltekit.head%
+    </head>
+    <body
+        data-sveltekit-preload-data="hover"
+        class="antialiased bg-gradient-to-b from-custom-teal-200 to-custom-teal-300 text-sm">
+        <section style="display: contents">%sveltekit.body%</section>
+    </body>
 </html>
