--- a/src/app.html
+++ b/src/app.html
@@ -8,7 +8,8 @@
     </head>
     <body
         data-sveltekit-preload-data="hover"
-        class="antialiased bg-gradient-to-b from-custom-teal-200 to-custom-teal-300 text-sm">
+        class="antialiased bg-custom-teal-200 text-sm"
+    >
         <section style="display: contents">%sveltekit.body%</section>
     </body>
 </html>
